trunk/Archive2/e7/53eae7efc6aee8/output
main.cpp:5:19: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
     const int g() const { return 43; }
                   ^
main.cpp: In function 'int main()':
main.cpp:12:11: error: lvalue required as left operand of assignment
     a.f() = 1;
           ^
main.cpp:13:12: error: lvalue required as left operand of assignment
     ca.g() = 2;
            ^
